--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "sourceMap": true,
-    "outDir": "./build",
+    "outDir": "./lib",
     "allowJs": true,
     "noEmit": false,
     "esModuleInterop": true
